# fastcampus-aiagent-v1

./: README.md  pyproject.toml  requirements.txt
Part 3_AI Agent 심화 프로젝트/Chapter 01. FastAPI/: 02. LangGraph 프로젝트를 API로 만들기🗒️.ipynb  main.py  test.py
Part 3_AI Agent 심화 프로젝트/Chapter 02. 추천시스템 Agent/: 02. 추천시스템 Agent (1).ipynb  03. 추천시스템 Agent (2).ipynb
Part 3_AI Agent 심화 프로젝트/Chapter 03. GraphRAG/: 05. Vector 기반 GraphRAG 구현하기🗒️.ipynb  06. Graph 기반 GraphRAG 구현하기🗒️.ipynb  07. Vector + Graph RAG 구현하기🗒️.ipynb  08. GraphRAG Agent🗒️.ipynb  pole dataset guide.html
